--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Анимация машинки</title>
+    <title>Анимация машинки ghhghggh</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
